# Insurance-M-A-DB

./: .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  consolidators.yaml  pyproject.toml
migrations/: 001_initial.sql
prompts/: structure_event.txt
reports/: 2026-W21.md  2026-W22.md  2026-W23.md  2026-W24.md  2026-W25.md  2026-W26.md  2026-W27.md  2026-W28.md  2026-W29.md
scripts/: cron_wrapper.sh
src/insurance_intel/: __init__.py  cli.py  config.py  digest.py  notify.py  persist.py  sources.py  structure.py  sweep.py
systemd/: insurance-intel.service  insurance-intel.timer
tests/: conftest.py  test_persist.py  test_structure.py
tests/fixtures/: helmsauer_konermann.md  mrh_trowe_nov2025.md  no_event_article.md
