[project]
name = "insurance-intel"
version = "0.1.0"
description = "DACH Insurance Broker M&A signal loop — Sprint 1: weekly trade-press sweep with LLM structuring, Postgres persistence, Slack digest, Git audit trail."
authors = [{ name = "Carl Moritz Köster", email = "kontakt@cmkdigital.de" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
insurance-intel = "insurance_intel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_intel"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line-length is handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: hits real Anthropic API — requires ANTHROPIC_API_KEY, costs money",
]
